--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  text-decoration: none;
+  color: black;
 }
 
 :root {
@@ -46,7 +48,13 @@ img {
 }
 
 section {
-  padding-block: 10rem;
+  padding-block: 2rem;
+}
+
+#imoveis,
+#destaques {
+  padding-top: 8rem;
+
 }
 
 .social-links {
@@ -58,9 +66,23 @@ section {
 
 .icon {
   color: black;
-  font-size: 2.9rem;
   cursor: pointer;
 }
+
+/* Search Input */
+
+.search-input {
+  display: flex;
+  width: 100%;
+  padding: 1rem;
+  margin-top: 8rem;
+  margin-bottom: 3rem;
+  border: 1px solid black;
+  border-radius: 0.2rem;
+  background-color: white;
+}
+
+/* Navigation */
 
 #navigation.scroll .logo path {
   fill: black;
@@ -68,4 +90,304 @@ section {
 
 #navigation.scroll .icon {
   color: black;
+}
+
+nav {
+  display: flex;
+
+  height: var(--nav-height);
+
+  position: fixed;
+  top: 0;
+  width: 100vw;
+
+  z-index: 100;
+
+  background-color: white;
+}
+
+nav .wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+nav.scroll {
+  background: orange;
+}
+
+nav button {
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+nav .menu,
+nav .close-menu {
+  position: fixed;
+}
+
+/*=== MENU-EXPANDED =================================*/
+
+body.menu-expanded {
+  overflow: hidden;
+}
+
+body.menu-expanded > :not(nav) {
+  visibility: hidden;
+}
+
+.menu,
+.close-menu,
+body.menu-expanded .open-menu {
+  opacity: 1;
+  visibility: hidden;
+}
+
+body.menu-expanded .menu,
+body.menu-expanded .close-menu {
+  opacity: 1;
+  visibility: visible;
+}
+
+.menu {
+  transform: translateY(100%);
+}
+
+body.menu-expanded .menu {
+  top: 0;
+  left: 0;
+  background: orange;
+
+  width: 100vw;
+  height: 100vh;
+
+  padding-top: var(--nav-height);
+
+  transition: transform 300ms;
+  transform: translateY(0);
+}
+
+.links {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  margin-top: 2rem;
+
+  width: min(50rem, 100%);
+  margin-inline: auto;
+  padding-inline: 2.4rem;
+
+  text-align: left;
+  
+  font-weight: 400;
+  font-size: 2.2rem;
+  line-height: 2rem;
+}
+
+.login {
+  padding-bottom: 3rem;
+  border-bottom: 1px solid black;
+}
+
+.links a {
+  color: black;
+  text-decoration: none;
+}
+
+.siteMap,
+.contaUsuario {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.ajuda {
+  padding-top: 2rem;
+  border-top: 1px solid black;
+  
+}
+
+.siteMap .social-links {
+  padding-top: 3rem;
+  border-top: 1px solid black;
+  justify-content: flex-start;
+  gap: 3.2rem;
+}
+
+body.menu-expanded .logo,
+body.menu-expanded button {
+  position: relative;
+  z-index: 100;
+}
+
+/* Slide */
+
+.arrow {
+  width: 2.5rem;
+  height: 2.5rem;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  fill: rgba(255, 255, 255, 0.5);
+  cursor: pointer;
+}
+
+.arrow--left {
+  left: 5px;
+  
+}
+
+.arrow--right {
+  right: 5px;
+}
+
+.keen-slider {
+  transition: height 0.4s;
+}
+
+.keen-slider img{
+  width: 100%;
+
+}
+
+.buttonDestaque {
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
+  font-size: 1.2rem;
+  font-weight: 700;
+  padding: .2rem .6rem;
+  background-color:white;
+  border-radius: 0.2rem;
+  line-height: 1.5;
+}
+
+/* Cards */
+
+.cards {
+  text-align: left;
+
+  background: white;
+  border-radius: 0.2rem;
+  background-color: white;
+  border: 0.03rem solid lightgray;
+  margin-bottom: 3rem;
+}
+
+.cards a {
+  text-decoration: none;
+  color: black;
+}	
+
+.card {
+  padding-left: 1rem;
+  line-height: 1.7;
+}
+
+.tipo {
+  font-size: 1.2rem;
+  font-weight: 700;
+}
+
+.rua {
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+
+.bairroCidade {
+  font-size: 1.2rem;
+  color: gray;
+}
+
+.caracteristicas {
+  font-size: 1.2rem;
+  margin-block: 0.3rem;
+  color: gray;
+}
+
+.condMaisIptu {
+  font-size: 1.2rem;
+  font-weight: 500;
+  color: gray;
+}
+
+.preco {
+  font-size: 1.2rem;
+  font-weight: 700;
+  margin-bottom: .4rem;
+}
+
+/* BackTop */
+#backToTopButton {
+  position: fixed;
+  bottom: 1rem;
+  right: 3rem;
+
+  opacity: 0;
+  visibility: hidden;
+
+  transform: translateY(100%);
+  transition: 200ms;
+  width: 3.5rem;
+  height: 3.5rem;
+  border-radius: 50%;
+
+}
+
+#backToTopButton.show {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0);
+  background-color: orange;
+}
+
+/* Footer */
+
+footer {
+  margin-block: 3rem;
+  padding-block: 1rem;
+  background-color: orange;
+  text-align: left;
+  color: black;
+}
+
+.footer{
+  margin-top: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.footer h3 {
+  font-size: 1.8rem;
+  font-weight: 700;
+
+}
+
+.footer li {
+  font-size: 1.6rem;
+  margin-block: 1.3rem;
+} 
+
+.footer li a:hover {
+  border-bottom: 1px solid black;
+}
+
+.copyright{
+  margin-top: 1rem;
+}
+
+.rodape {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  padding-top: 2rem;
+  border-top: 0.1rem solid black;
+}
+
+
+footer .social-links {
+  justify-content: flex-start;
+
 }
